test/corpus/assignment.txt
==================
Simple assignment
==================

a <= b

---

(source_file
  (assignment
    (identifier)
    (identifier)))

==================
Multiple output assignment
==================

a, b, d <= c

---

(source_file
  (assignment
    (assignment_left_list
      (identifier)
      (identifier)
      (identifier))
    (identifier)))

==================
Multiple input assignment
==================

a <= c, b, d

---

(source_file
  (assignment
    (identifier)
    (assignment_right_list
      (identifier)
      (identifier)
      (identifier))))

==================
Number input assignment
==================

a <= 0

---

(source_file
  (assignment
    (identifier)
    (number)))

==================
Multiple number input assignment
==================

a <= 0, 1, 2, 98, 123

---

(source_file
  (assignment
    (identifier)
    (assignment_right_list
      (number)
      (number)
      (number)
      (number)
      (number))))
